Updated from https://github.com/clarin-eric/clarin-drupal-bootstrap-theme/commit/6f6a5c1 Last commit message: Fix Apps menu positioning on narrow mobile

--- a/css/style.css
+++ b/css/style.css
@@ -9395,6 +9395,11 @@ img {
   width: -moz-max-content;
   width: max-content;
 }
+@media (max-width: 35.9375rem) {
+  #app-menu-dropdown .dropdown-menu {
+    left: -14rem;
+  }
+}
 
 .dropdown-header {
   font-weight: 700;
